[package]
name = "camel-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface for Apache Camel in Rust"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/camel-cli"
readme = "README.md"
keywords = ["camel", "cli", "integration", "messaging"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "camel_cli"
path = "src/lib.rs"

[[bin]]
name = "camel"
path = "src/main.rs"

[dependencies]
chrono.workspace = true
clap = { version = "4", features = ["derive"] }
config.workspace = true
include_dir = "0.7"
serde_json.workspace = true
tokio-util.workspace = true
tokio.workspace = true
toml.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
camel-api.workspace = true
camel-dsl.workspace = true
camel-core.workspace = true
camel-config = { workspace = true, features = ["otel", "kubernetes"] }
camel-component-api.workspace = true
camel-component-container.workspace = true
camel-component-controlbus.workspace = true
camel-component-direct.workspace = true
camel-component-file.workspace = true
camel-component-http.workspace = true
camel-component-jms.workspace = true
camel-component-kafka = { workspace = true, optional = true }
camel-component-grpc = { workspace = true, optional = true }
camel-component-log.workspace = true
camel-component-mock.workspace = true
camel-master = { workspace = true }
camel-component-redis.workspace = true
camel-component-sql.workspace = true
camel-component-timer.workspace = true
camel-component-validator.workspace = true
camel-component-ws.workspace = true
camel-dataformat-protobuf = { workspace = true, optional = true }
camel-proto-compiler = { workspace = true, optional = true }
camel-xslt = { workspace = true }
camel-xj = { workspace = true }
camel-language-js.workspace = true
camel-language-jsonpath.workspace = true
camel-language-rhai.workspace = true
camel-language-xpath.workspace = true

[dev-dependencies]
tempfile = "3"
serde_json.workspace = true

[features]
default = ["otel", "grpc"]
otel = ["camel-component-http/otel", "camel-component-ws/otel"]
kafka = ["dep:camel-component-kafka", "dynamic-linking"]
grpc = ["dep:camel-component-grpc", "dep:camel-dataformat-protobuf", "dep:camel-proto-compiler", "camel-dsl/protobuf"]
cmake-build = ["camel-component-kafka/cmake-build"]
dynamic-linking = ["camel-component-kafka/dynamic-linking"]
kafka-static = ["dep:camel-component-kafka", "cmake-build"]
