[package]
name = "camel-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface for Apache Camel in Rust"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/camel-cli"
readme = "README.md"
keywords = ["camel", "cli", "integration", "messaging"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "camel_cli"
path = "src/lib.rs"

[[bin]]
name = "camel"
path = "src/main.rs"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["derive"] }
config.workspace = true
include_dir = "0.7"
serde_json.workspace = true
tokio-util.workspace = true
tokio.workspace = true
toml.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
camel-api.workspace = true
camel-bean.workspace = true
camel-dsl.workspace = true
camel-core = { workspace = true, features = ["lang-js", "lang-rhai", "lang-jsonpath", "lang-xpath"] }
camel-config = { workspace = true, features = ["otel", "kubernetes"] }
camel-component-api.workspace = true
camel-component-container.workspace = true
camel-component-controlbus.workspace = true
camel-component-direct.workspace = true
camel-component-seda.workspace = true
camel-component-file.workspace = true
camel-component-http.workspace = true
camel-component-jms.workspace = true
camel-component-kafka = { workspace = true, optional = true }
camel-component-mqtt = { workspace = true, optional = true }
camel-component-grpc = { workspace = true, optional = true }
camel-component-log.workspace = true
camel-component-mock.workspace = true
camel-component-opensearch = { workspace = true }
camel-master = { workspace = true }
camel-component-redis.workspace = true
camel-component-sql.workspace = true
camel-component-cron.workspace = true
camel-component-timer.workspace = true
camel-component-validator.workspace = true
camel-component-ws.workspace = true
camel-dataformat-protobuf = { workspace = true, optional = true }
camel-proto-compiler = { workspace = true, optional = true }
camel-xslt = { workspace = true }
camel-xj = { workspace = true }
camel-component-wasm = { workspace = true, optional = true }
camel-component-llm = { workspace = true, optional = true }
camel-component-cxf = { workspace = true }
camel-function = { workspace = true }
camel-wit.workspace = true
camel-auth.workspace = true
camel-component-keycloak.workspace = true
rustls.workspace = true
camel-component-surrealdb = { workspace = true, optional = true }
camel-component-exec = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
serde_json.workspace = true

[features]
default = ["otel", "grpc", "wasm", "http-static", "llm", "surrealdb", "exec", "mqtt"]
otel = ["camel-component-http/otel", "camel-component-ws/otel"]
# kafka activates the kafka component code only — linking strategy is orthogonal.
# Use `kafka` alone (rdkafka will build from source via cmake by default),
# `kafka,dynamic-linking` to link against a system librdkafka, or
# `kafka-static` to force a cmake source build explicitly.
kafka = ["dep:camel-component-kafka"]
grpc = [
  "dep:camel-component-grpc",
  "dep:camel-dataformat-protobuf",
  "dep:camel-proto-compiler",
  "camel-dsl/protobuf",
]
wasm = ["dep:camel-component-wasm"]
# LLM component. Default enables mock-only (zero extra deps).
# For real providers: --features "llm,camel-component-llm/openai"
# or "llm,camel-component-llm/ollama" or "llm,camel-component-llm/all-providers".
llm = ["dep:camel-component-llm"]
http-static = []
cmake-build = ["camel-component-kafka/cmake-build"]
dynamic-linking = ["camel-component-kafka/dynamic-linking"]
kafka-static = ["dep:camel-component-kafka", "cmake-build"]
# mqtt activates the MQTT component (rumqttc, no TLS by default).
# Use mqtt-tls to enable TLS support (mqtts:// URIs).
mqtt = ["dep:camel-component-mqtt"]
mqtt-tls = ["mqtt", "camel-component-mqtt/tls"]
surrealdb = ["dep:camel-component-surrealdb"]
# exec activates the fail-closed system command execution component.
exec = ["dep:camel-component-exec"]

[lints]
workspace = true
