[package]
name = "camel-component"
description = "Component trait and registry for rust-camel"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
camel-api.workspace = true
camel-util.workspace = true
camel-endpoint.workspace = true
async-trait.workspace = true
thiserror.workspace = true
