[package]
name = "camel-config"
description = "Configuration and route discovery for rust-camel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/camel-config"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
camel-api.workspace = true
camel-core.workspace = true
camel-dsl.workspace = true
camel-otel = { workspace = true }
camel-prometheus = { workspace = true }
camel-health = { workspace = true }
camel-processor.workspace = true
config = { workspace = true }
glob = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
serde_yaml.workspace = true
toml = { workspace = true }
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry-appender-tracing = { workspace = true, optional = true }
camel-platform-kubernetes = { workspace = true, optional = true }

[dev-dependencies]
tokio.workspace = true
tempfile = "3"
camel-component-timer.workspace = true
camel-component-log.workspace = true

[features]
otel = ["dep:tracing-opentelemetry", "dep:opentelemetry-appender-tracing"]
kubernetes = ["dep:camel-platform-kubernetes"]
