[package]
name = "camel-core"
description = "Core engine for rust-camel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/camel-core"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
camel-api.workspace = true
camel-util.workspace = true
camel-support.workspace = true
camel-processor.workspace = true
camel-component.workspace = true
camel-endpoint.workspace = true
camel-language-api.workspace = true
camel-language-simple.workspace = true
camel-bean.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tokio-util.workspace = true
tracing.workspace = true
arc-swap.workspace = true
serde = { workspace = true }
chrono = { workspace = true }
tracing-subscriber = { workspace = true }
notify.workspace = true

[dev-dependencies]
futures = "0.3"
tempfile = "3"
serde_json = "1"
camel-component-timer = { path = "../components/camel-timer" }
camel-component-log = { path = "../components/camel-log" }
camel-component-mock = { path = "../components/camel-mock" }
camel-dsl = { path = "../camel-dsl" }
camel-bean = { path = "../camel-bean" }
