[package]
name = "camel-core"
description = "Core engine for rust-camel"
# Verified: cargo build -p camel-core --no-default-features compiles cleanly (CORE-002)
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/camel-core"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
camel-api.workspace = true
camel-processor.workspace = true
bytes.workspace = true
camel-component-api.workspace = true
camel-endpoint.workspace = true
camel-language-api.workspace = true
camel-language-simple.workspace = true
camel-language-js = { workspace = true, optional = true }
camel-language-rhai = { workspace = true, optional = true }
camel-language-minijinja = { workspace = true, optional = true }
camel-language-jsonpath = { workspace = true, optional = true }
camel-language-xpath = { workspace = true, optional = true }
camel-bean.workspace = true
camel-auth.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tokio-util.workspace = true
futures.workspace = true
dashmap.workspace = true
tracing.workspace = true
arc-swap.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing-subscriber = { workspace = true }
async-stream.workspace = true
notify.workspace = true
opentelemetry = { workspace = true }
redb = { workspace = true }
parking_lot = "0.12"

[features]
default = ["export-internal-adapters"]
lang-js = ["camel-language-js"]
lang-minijinja = ["camel-language-minijinja"]
lang-rhai = ["camel-language-rhai"]
lang-jsonpath = ["camel-language-jsonpath"]
lang-xpath = ["camel-language-xpath"]
# `export-internal-adapters` gates ONLY the public re-export of internal adapter types via
# `pub use` / `pub mod` façades in lib.rs. It does NOT gate compilation — adapters always compile.
# Compile-gating + the runtime/adapters structural split is deferred to Tier C (rc-d0pu.3); see ADR-0045 §4.
export-internal-adapters = []
# Compatibility alias kept for Semver stability; external Cargo.tomls using `internal-adapters`
# continue to work. Do not reference in new code.
internal-adapters = ["export-internal-adapters"]

[dev-dependencies]
camel-component-api = { workspace = true, features = ["test-support"] }
tempfile = { workspace = true }
camel-component-timer.workspace = true
camel-component-log.workspace = true
camel-component-mock.workspace = true
criterion.workspace = true
uuid.workspace = true

[[bench]]
name = "context"
harness = false

[[bench]]
name = "lifecycle"
harness = false

[[bench]]
name = "swap_pipeline_latency"
harness = false

[[bench]]
name = "lock_contention"
harness = false

[[bench]]
name = "tracing_overhead"
harness = false

[[bench]]
name = "pipeline_throughput"
harness = false

[lints]
workspace = true
