[package]
name = "camel-dsl"
description = "DSL support for rust-camel (YAML, etc)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/camel-dsl"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
camel-api.workspace = true
camel-core.workspace = true
camel-processor.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
serde_yaml.workspace = true
camel-component-api.workspace = true
camel-endpoint.workspace = true
glob = { workspace = true }
regex = "1"

[dev-dependencies]
criterion.workspace = true
tempfile = "3"

[[bench]]
name = "route_parsing"
harness = false
