[package]
name = "camel-dsl"
description = "DSL support for rust-camel (YAML, JSON)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/camel-dsl"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
camel-api.workspace = true
camel-auth.workspace = true
camel-core.workspace = true
camel-processor.workspace = true
camel-dataformat-protobuf = { workspace = true, optional = true }
camel-proto-compiler = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
noyalib.workspace = true
tracing.workspace = true
camel-component-api.workspace = true
camel-endpoint.workspace = true
glob = { workspace = true }
regex.workspace = true
schemars = { workspace = true, optional = true }
ts-rs = { workspace = true, optional = true }

[features]
protobuf = ["dep:camel-dataformat-protobuf", "dep:camel-proto-compiler"]
schema = ["dep:schemars", "dep:ts-rs", "ts-rs/serde-json-impl", "camel-api/schema"]

[dev-dependencies]
async-trait.workspace = true
criterion.workspace = true
jsonschema = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "route_parsing"
harness = false

[lints]
workspace = true
