[package]
name = "camel-endpoint"
description = "Endpoint abstractions for rust-camel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/camel-endpoint"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
camel-api.workspace = true
camel-util.workspace = true
camel-endpoint-macros.workspace = true
async-trait.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
