[package]
name = "camel-health"
description = "Health check support for rust-camel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/camel-health"

[dependencies]
camel-api.workspace = true
camel-core.workspace = true
async-trait.workspace = true
