[package]
name = "camel-health"
description = "Health check HTTP endpoints and standalone server for rust-camel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/camel-health"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
camel-api.workspace = true
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
