[package]
name = "camel-processor"
description = "Message processors for rust-camel"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
camel-api.workspace = true
camel-util.workspace = true
camel-support.workspace = true
async-trait.workspace = true
futures = "0.3"
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true

[dev-dependencies]
futures = "0.3"
tokio = { workspace = true, features = ["macros", "rt"] }
