[package]
name = "camel-processor"
description = "Message processors for rust-camel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/camel-processor"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
camel-api.workspace = true
camel-util.workspace = true
camel-support.workspace = true
async-trait.workspace = true
futures = "0.3"
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true

[dev-dependencies]
bytes.workspace = true
futures = "0.3"
tokio = { workspace = true, features = ["macros", "rt"] }
