[package]
name = "camel-processor"
description = "Message processors for rust-camel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/camel-processor"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
camel-api.workspace = true
camel-language-api.workspace = true
camel-util.workspace = true
camel-support.workspace = true
async-trait.workspace = true
futures = "0.3"
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower.workspace = true
tracing.workspace = true
rand.workspace = true

[dev-dependencies]
bytes.workspace = true
criterion.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }

[[bench]]
name = "choice"
harness = false

[[bench]]
name = "filter"
harness = false

[[bench]]
name = "splitter"
harness = false

[[bench]]
name = "multicast"
harness = false

[[bench]]
name = "aggregator"
harness = false

[[bench]]
name = "circuit_breaker"
harness = false

[[bench]]
name = "load_balancer"
harness = false
