[package]
name = "camel-test"
description = "Testing utilities for rust-camel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/camel-test"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
camel-api.workspace = true
camel-core.workspace = true
camel-builder.workspace = true
camel-component.workspace = true
camel-processor.workspace = true
camel-component-mock.workspace = true
camel-component-timer.workspace = true
camel-component-log.workspace = true
camel-component-direct.workspace = true
camel-component-file.workspace = true
camel-component-http.workspace = true
camel-endpoint.workspace = true
camel-component-controlbus.workspace = true
tokio.workspace = true
tower.workspace = true

[dev-dependencies]
camel-config = { path = "../camel-config" }
camel-language-rhai = { path = "../languages/camel-language-rhai" }
serde_json.workspace = true
tempfile = "3"
wiremock = "0.6"
reqwest = { workspace = true }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["redis", "kafka", "postgres"] }
camel-component-redis = { path = "../components/camel-redis" }
redis = { version = "1", features = ["tokio-comp", "aio"] }
camel-component-kafka = { path = "../components/camel-kafka" }
camel-component-sql = { path = "../components/camel-sql" }
sqlx = { version = "0.8", features = ["runtime-tokio", "any", "postgres"] }
tokio-util = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
