[package]
name = "camel-test"
description = "Testing utilities for rust-camel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/camel-test"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
camel-api.workspace = true
camel-core.workspace = true
camel-builder.workspace = true
camel-component-api.workspace = true
camel-processor.workspace = true
camel-component-mock.workspace = true
camel-component-timer.workspace = true
camel-component-log.workspace = true
camel-component-direct.workspace = true
camel-component-file.workspace = true
camel-component-http.workspace = true
camel-endpoint.workspace = true
camel-component-controlbus.workspace = true
tokio = { workspace = true, features = ["test-util"] }
tower.workspace = true
testcontainers = { version = "0.23", optional = true }
testcontainers-modules = { version = "0.11", features = ["redis", "kafka", "postgres", "k3s"], optional = true }
camel-component-redis = { workspace = true, optional = true }
camel-component-kafka = { workspace = true, optional = true }
camel-component-sql = { workspace = true, optional = true }
camel-component-jms = { workspace = true, optional = true }
camel-platform-kubernetes = { workspace = true, optional = true }
kube = { workspace = true, optional = true }
k8s-openapi = { workspace = true, optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "any", "postgres"], optional = true }

[dev-dependencies]
camel-config.workspace = true
camel-language-api.workspace = true
camel-language-rhai.workspace = true
camel-language-jsonpath.workspace = true
camel-language-xpath.workspace = true
camel-dsl.workspace = true
camel-bean.workspace = true
serde.workspace = true
tokio-util.workspace = true
serde_json.workspace = true
tempfile = "3"
wiremock = "0.6"
reqwest = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
redis = { version = "1", features = ["tokio-comp", "aio"] }

[features]
integration-tests = [
    "dep:testcontainers",
    "dep:testcontainers-modules",
    "dep:camel-component-redis",
    "dep:camel-component-kafka",
    "dep:camel-component-sql",
    "dep:sqlx",
    "dep:camel-component-jms",
    "dep:camel-platform-kubernetes",
    "dep:kube",
    "dep:k8s-openapi",
]
