[package]
name = "camel-test"
description = "Testing utilities for rust-camel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/camel-test"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
camel-api.workspace = true
camel-core.workspace = true
camel-builder.workspace = true
camel-component-api = { workspace = true, features = ["test-support"] }
camel-processor.workspace = true
camel-component-mock.workspace = true
camel-component-timer.workspace = true
camel-component-log.workspace = true
camel-component-direct.workspace = true
camel-component-seda.workspace = true
camel-component-file.workspace = true
camel-component-http.workspace = true
camel-endpoint.workspace = true
camel-component-controlbus.workspace = true
tokio = { workspace = true, features = ["test-util"] }
tower.workspace = true
testcontainers = { workspace = true, optional = true }
testcontainers-modules = { workspace = true, features = ["redis", "kafka", "postgres", "k3s"], optional = true }
camel-component-redis = { workspace = true, optional = true }
camel-component-kafka = { workspace = true, optional = true }
camel-component-mqtt = { workspace = true, optional = true }
camel-component-sql = { workspace = true, optional = true }
camel-component-jms = { workspace = true, optional = true }
camel-component-cxf = { workspace = true, optional = true }
camel-component-container = { workspace = true, optional = true }
camel-component-opensearch = { workspace = true, optional = true }
camel-component-surrealdb = { workspace = true, optional = true }
surrealdb = { workspace = true, optional = true }
bollard = { workspace = true, optional = true }
camel-component-validator = { workspace = true, optional = true }
camel-xslt = { workspace = true, optional = true }
camel-xj = { workspace = true, optional = true }
camel-platform-kubernetes = { workspace = true, optional = true }
camel-master = { workspace = true, optional = true }
kube = { workspace = true, optional = true }
k8s-openapi = { workspace = true, optional = true }
sqlx = { workspace = true, features = ["runtime-tokio", "any", "postgres", "tls-rustls"], optional = true }

[dev-dependencies]
camel-master = { workspace = true }
camel-config = { workspace = true, features = ["kubernetes"] }
camel-language-api.workspace = true
camel-language-rhai.workspace = true
camel-language-jsonpath.workspace = true
camel-language-xpath.workspace = true
camel-dsl.workspace = true
camel-bean.workspace = true
camel-function.workspace = true
camel-component-ws.workspace = true
camel-auth.workspace = true
serde.workspace = true
tokio-util.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tempfile = { workspace = true }
wiremock = { workspace = true }
reqwest = { workspace = true }
axum.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
redis = { workspace = true, features = ["tokio-comp", "aio"] }
toml.workspace = true
futures.workspace = true
http.workspace = true
dashmap.workspace = true
tower-http.workspace = true
flate2 = { workspace = true }
bytes.workspace = true
zip.workspace = true

[features]
integration-tests = [
    "dep:camel-master",
    "dep:testcontainers",
    "dep:testcontainers-modules",
    "dep:camel-component-redis",
    "dep:camel-component-kafka",
    "dep:camel-component-mqtt",
    "dep:camel-component-sql",
    "dep:sqlx",
    "dep:camel-component-jms",
    "dep:camel-component-cxf",
    "dep:camel-component-container",
    "dep:camel-component-opensearch",
    "dep:bollard",
    "dep:camel-component-validator",
    "dep:camel-xslt",
    "dep:camel-xj",
    "dep:camel-platform-kubernetes",
    "dep:kube",
    "dep:k8s-openapi",
    "dep:camel-component-surrealdb",
    "dep:surrealdb",
]

[lints]
workspace = true
