[package]
name = "camel-util"
description = "Utility functions and helpers for rust-camel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/camel-util"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
