[package]
name = "camel-wasm-sdk"
description = "WASM SDK for building Camel guest plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/camel-wasm-sdk"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wit-bindgen.workspace = true
