[package]
name = "aggregator"
description = "Aggregator EIP example — batch orders by correlation key"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
camel-api.workspace = true
camel-core.workspace = true
camel-builder.workspace = true
camel-component-timer.workspace = true
camel-component-log.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
