[package]
name = "bean-demo"
description = "Bean registry example for rust-camel"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
camel-api.workspace = true
camel-bean.workspace = true
camel-core.workspace = true
camel-builder.workspace = true
camel-dsl.workspace = true
camel-component-log.workspace = true
camel-component-timer.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true