[package]
name = "circuit-breaker"
description = "Circuit Breaker EIP example — resilient service calls with fallback"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
camel-api.workspace = true
camel-core.workspace = true
camel-builder.workspace = true
camel-component-direct.workspace = true
camel-component-log.workspace = true
camel-component-timer.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
