[package]
name = "config-basic"
description = "Basic configuration example for rust-camel"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
camel-api.workspace = true
camel-core.workspace = true
camel-config.workspace = true
camel-component-timer.workspace = true
camel-component-log.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true