[package]
name = "config-profiles"
version = "0.1.0"
edition = "2021"

[dependencies]
camel-core = { path = "../../crates/camel-core" }
camel-config = { path = "../../crates/camel-config" }
camel-timer = { path = "../../crates/components/camel-timer" }
camel-log = { path = "../../crates/components/camel-log" }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"