[package]
name = "config-profiles"
version.workspace = true
edition.workspace = true

[dependencies]
camel-core.workspace = true
camel-config.workspace = true
camel-component-timer.workspace = true
camel-component-log.workspace = true
camel-api.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true