[package]
name = "container-example"
description = "Container component example for rust-camel"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
camel-api.workspace = true
camel-core.workspace = true
camel-builder.workspace = true
camel-component-container = { workspace = true }
camel-component-timer.workspace = true
camel-component-log.workspace = true
camel-component-direct.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "signal", "time"] }
tracing-subscriber.workspace = true
bollard = "0.18.1"
futures = { workspace = true }
